--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pinkyswear.js",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Minimalistic Promises/A+ implementation, <350 bytes",
   "main": "pinkyswear.js",
   "dependencies": {
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "node promise-test.js"
+    "test": "node promise-test.js pinkyswear.js; node promise-test.js pinkyswear.min.js"
   },
   "repository": {
     "type": "git",
