--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "promises-aplus-tests": "~2.0.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^1.18.2"
+  },
   "scripts": {
-    "test": "node promise-test.js pinkyswear.js; node promise-test.js pinkyswear.min.js"
+    "test": "node promise-test.js pinkyswear.js; node promise-test.js pinkyswear.min.js; mocha   pinkyswear-additional-functionality-test.js"
   },
   "repository": {
     "type": "git",
