--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "pinkyswear",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "Minimalistic Promises/A+ implementation, <500 bytes",
   "main": "pinkyswear.js",
   "dependencies": {
-    "promises-aplus-tests": "~2.0.3"
+    "promises-aplus-tests": "~2.0.4"
   },
   "devDependencies": {
     "mocha": "^1.18.2"
@@ -17,7 +17,7 @@
     "url": "https://github.com/timjansen/PinkySwear.js.git"
   },
   "keywords": [
-    "promises"
+    "promises", "promises-aplus"
   ],
   "author": "Tim Jansen",
   "license": "Public Domain",
